updated the email input tag with name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1><span>We're</span><br> coming<br> soon</brr></h1>
         <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcemnets and our launch deals.</p>
         <form class="inputfield">
-          <input type="email" placeholder="Email Address" required>
+          <input type="email" name="email" placeholder="Email Address" required>
           <button type="submit"><img src="images/icon-arrow.svg" alt="arrow"></button>
         </form>
       </div>
